@@ -1,3 +1,8 @@
+2006-08-03 Nicola Pero <nicola.pero@meta-innovation.com>
+
+	* SQLClient.m ([SQLClient -quoteString:]): Renamed local variable
+	that had the same name as the method argument.
+	
 2005-06-23 Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* SQLClient.m: transaction efficiency tweak.
